--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
         <div class="row is-full-width">
           <h2 class="title is-3 has-text-centered"><span class="dvima">Method</span></h2>
           <div>
-          <video poster="" autoplay muted controls loop height="100%">
+          <video poster="" autoplay muted loop height="100%">
             <source src="static/videos/method1_anon.mp4" type="video/mp4">
           </video>
           </div>
           <br>
           <div>
-          <video poster="" autoplay muted controls loop height="100%">
+          <video poster="" autoplay muted loop height="100%">
             <source src="static/videos/method2.mp4" type="video/mp4">
           </video>
           </div>
